--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,8 @@ body{
     padding: 0;
     width: 60%;
     height: 50vh;
-    background-size: 10px 20px;
-    margin: 0;
-    padding: 0;
+    
+  
       
    }
 
@@ -22,11 +21,24 @@ body{
     cursor: pointer;
   }
 
+
+  .divider {
+    
+      border: none;
+      border-top: 1px solid gray; /* Adjust the color and thickness as needed */
+      margin: 0;
+      margin-left: 0; /* Reset the left margin */
+      margin-right: 0; /* Reset the right margin */
+      width: 168%;
+     
+  }
+
   .menu {
     display: flex;
-    gap: 20px;
+    gap: 25px;
     width: 25px;
-    height: 25px;
+    height: 23px;
+   
   }
 
 
@@ -39,6 +51,15 @@ body{
     color: #5b6770;
     font-style: bold;
     white-space: nowrap;
+
+  }
+
+  .menu img {
+
+    display: inline block;
+    width: 25px;
+    height: 23px;
+    left: 1%;
 
   }
 
@@ -64,7 +85,7 @@ body{
     font-family: Poppins-SemiBold, sans-serif;
     text-decoration: none;
     color: #5b6770;
-    font-style: bold;
+    font-weight: bold;
     white-space: nowrap;
 
   }
@@ -75,31 +96,53 @@ body{
 
   }
 
-  .homegoods-picture img{
 
-    width: 160%;
-    height: auto;
-    margin-top: 30px;
-    margin-left: 35px;
-        
-    
+  .red-banner {
+    background: linear-gradient(to right, #812929, #9e24249d); /* Red gradient background */
+    color: white;
+    text-align: center;
+    padding: 19px;
+    width: 165%;
+    white-space: nowrap;
 }
 
+.option-item.special {
+  color: red;
+}
 
-.homegoods-picture .button-item
+.picture-button-container {
+  position: relative;
+  display: inline-block;
+}
 
-{
-  
+.picture-button-container img {
+  width: 160%;
+  height: auto;
+  margin-top: 30px;
+  margin-left: 35px;
+}
+
+.button-container {
   position: absolute;
-  top: 50%;
-  left: 10%;
-  right: 75%;
-  
-  font-size: 16px;
-  padding: 10px 2px;
+  top: 200px;
+  left: 87px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px;
+}
+
+.button {
+  background-color: white;
+  color: gray;
   border: none;
+  padding: 16px 80px;
+  text-align: center;
+  text-decoration: none;
+  font-weight: bold;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 4px;
   cursor: pointer;
   
-
-
 }
