--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,46 @@ body{
   }
 
 
+  .logo-and-searchbox{
+
+    display: flex;
+    align-items: center;
+  }
+
+  .homegoods-logo{
+    margin-left: 800px;
+    margin-top: 18px;
+    margin-right: 300px;
+   }
+
+   .search-box {
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    padding: 5px;
+    width: 250px;
+    box-sizing: border-box;
+}
+
+.search-box input {
+    flex: 1;
+    border: none;
+    outline: none;
+}
+
+.divider {
+    margin: 0 10px;
+    color: #333;
+}
+
+.search-box img{
+
+width: 25px;
+height: auto;
+
+
+}
+
   .divider {
     
       border: none;
@@ -63,11 +103,7 @@ body{
 
   }
 
-  .homegoods-logo{
-   margin-left: 800px;
-   margin-top: 18px;
-
-  }
+ 
 
   .homegoods-options{
 
@@ -142,7 +178,6 @@ body{
   font-weight: bold;
   display: inline-block;
   font-size: 16px;
-  border-radius: 4px;
   cursor: pointer;
   
 }
